2009-07-15  Francois Suter  <francois@typo3.org>

	* Cleanup #11408: Object Browser uses hardcoded texts (plus some CGL cleanup) (thanks to Christopher Stelmaszyk)

2009-07-15  Oliver Hader  <oliver@typo3.org>

	* Added feature #11510: Store timestamp of last modification of session data to frontend user object

2009-07-14  Oliver Hader  <oliver@typo3.org>

	* Added feature #11508: Integrate possibility to define lifetime of frontend session data
	* Fixed bug #11526: Hanging record sets in tslib_feUserAuth

2009-07-12  Ingo Renner  <ingo@typo3.org>

	* Resolved issue #11530: Replaced t3lib_div::GParrayMerged() with new method t3lib_div::_GPmerged()

2009-07-08  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11379: TStemplate Info/Modify uses hardcoded texts (Thanx to Christopher Stelmaszyk)

2009-07-09  Martin Kutschker  <masi@typo3.org>

	* Fixed bug: same error message is used twice for different errors

2009-07-09  Ingo Renner  <ingo@typo3.org>

	* Cleanup: Removed a @see annotation to a deprecated function

2009-07-08  Rupert Germann  <rupi@gmx.li>

	* Added feature #11499: Database compare in install tool can require a huge amount of clicks. Added select/deselect all links.

2009-07-08  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11412: Using typolinkLinkAccessRestrictedPages does not take different domain names into account

2009-07-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11493: Ext JS with debug setting now also deliver debug versions of adapters
	* Added feature #11492: Update Ext JS to 3.0 final

2009-07-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11480: missing BACK_PATH in css inclusion of Ext JS stylesheets

2009-07-06  Michael Stucki  <michael@typo3.org>

	* Revert old change from 2006-09-01: Remove key length for sys_refindex table (was needed by $TYPO3_CONF_VARS[SYS][multiplyDBfieldSize] which is considered deprecated nowadays) (thanks to Xavier Perseguers)

2009-07-03  Oliver Hader  <oliver@typo3.org>
