@@ -1,3 +1,7 @@
+2009-07-16  Francois Suter  <francois@typo3.org>
+
+	* Bug #11249: Abusive deprecation logging in tslib_content::getData()
+
 2009-07-15  Francois Suter  <francois@typo3.org>
 
 	* Cleanup #11408: Object Browser uses hardcoded texts (plus some CGL cleanup) (thanks to Christopher Stelmaszyk)
